######### 2014-4-25 ##########
alter table shop_yunda_order add column is_jzhw tinyint(1) NOT NULL;
######### 2014-4-24 ##########
alter table shop_yunda_order add column parent_package_id varchar(64) NOT NULL;
create index shop_yunda_order_parent_package_id on shop_yunda_order(parent_package_id);
alter table shop_yunda_order add column upload_weight varchar(10) NOT NULL;
alter table shop_yunda_order add column uploaded datetime DEFAULT NULL;
alter table shop_yunda_order add column weighted datetime DEFAULT NULL;

alter table shop_yunda_order drop index cus_oid;
alter table shop_yunda_order add unique key (out_sid);
######### 2014-4-12 ##########
alter table shop_categorys_productcategory change parent_cid parent_cid int(11) NOT NULL;
######### 2014-4-11 ##########
alter table shop_items_productlocation add column product_id int(11) NOT NULL;
alter table shop_items_productlocation add column sku_id int(11);
alter table shop_items_productlocation drop index outer_id;
alter table shop_items_productlocation add unique key (product_id,sku_id,district_id);
######### 2014-3-27 ##########
alter table shop_weixin_account add column jmenu varchar(1024) NOT NULL;
######### 2014-3-24 ##########
alter table shop_yunda_order add column weighted datetime NOT NULL;
update shop_yunda_order set weighted=created;
######### 2014-3-22 ##########
alter table shop_memorule_composerule add column gif_count int(11) NOT NULL;
######### 2014-3-1 ##########
alter table shop_comments_comment add replayer_id int(11) DEFAULT NULL;
alter table shop_comments_comment add column replay_at datetime DEFAULT NULL;
alter table shop_comments_comment ADD FOREIGN KEY (replayer_id) REFERENCES auth_user(id);
######### 2014-1-10 ##########
drop index purchase_id on shop_purchases_item;
alter table  shop_purchases_item add UNIQUE(purchase_id,product_id,sku_id);
drop index purchase_storage_id on shop_purchases_storageitem;