@@ -102,7 +102,7 @@ class YundaCustomer(models.Model):
     created    = models.DateTimeField(auto_now_add=True,verbose_name=u'创建日期')
     modified   = models.DateTimeField(auto_now=True,verbose_name=u'修改日期')
     
-    memo      =  models.CharField(max_length=20,blank=True,verbose_name=u'备注')  
+    memo      =  models.CharField(max_length=100,blank=True,verbose_name=u'备注')  
     
     status     = models.CharField(max_length=10,default=NORMAL,
                                   choices=ORDER_STATUS_CHOICES,verbose_name=u'状态')
@@ -125,7 +125,7 @@ class LogisticOrder(models.Model):
     
     id         = BigIntegerAutoField(primary_key=True,verbose_name=u'ID')
     cus_oid    = models.CharField(max_length=64,blank=True,db_index=True,verbose_name=u'客户订单编号')
-    #customer   = models.ForeignKey(YundaCustomer, verbose_name=u'所属客户')
+    yd_customer   = models.ForeignKey(YundaCustomer, verbose_name=u'所属客户')
     
     out_sid    = models.CharField(max_length=64,unique=True,blank=True,verbose_name=u'物流单号')
     parent_package_id = models.CharField(max_length=64,db_index=True,blank=True,verbose_name=u'大包编号')
